# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

# meson file, for building this example as part of a main DPDK build.
#
# To build this example as a standalone application with an already-installed
# DPDK instance, use 'make'

allow_experimental_apis = true
sources = files(
        'basicfwd.c',
        'doca_sf.c',
        'doca_argp.c',
        'doca_log.c',
        'doca_flow.c',
        'simple_fwd_vnf_core.c',
        'simple_fwd_port.c',
        'simple_fwd.c',
        'dpdk_utils.c',
)
